[metadata]
name = os-acc
summary = A library for attaching and detaching accelerators in OpenStack.
description-file = README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    os_acc

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
builders = html
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = os_acc/locale
domain = os_acc

[update_catalog]
domain = os_acc
output_dir = os_acc/locale
input_file = os_acc/locale/os-acc.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = os_acc/locale/os-acc.pot

[entry_points]
os_acc =
    pci = os_acc.pci:PciAccelerator
